--- a/desktop/build.gradle
+++ b/desktop/build.gradle
@@ -2,7 +2,7 @@ sourceCompatibility = 1.7
 sourceSets.main.java.srcDirs = [ "src/" ]
 sourceSets.main.resources.srcDirs = ["../core/assets"]
 
-project.ext.mainClassName = "com.group4.Auber.desktop.DesktopLauncher"
+project.ext.mainClassName = "com.team1.Auber.desktop.DesktopLauncher"
 project.ext.assetsDir = new File("../core/assets")
 
 task run(dependsOn: classes, type: JavaExec) {
