--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -38,5 +38,26 @@ jobs:
             - ~/.gradle
           key: v1-dependencies-{{ checksum "build.gradle" }}
 
+      - store_test_results:
+          path: build/test-results/test
+      - store_artifacts:
+          path: build/test-results/test
+          when: always
+
       # run tests!
-      - run: gradle test
+      - run:
+          name: Assemble JAR
+          command: |
+            # Skip this for other nodes
+            if [ "$CIRCLE_NODE_INDEX" == 0 ]; then
+            ./gradlew assemble
+            fi
+            # As the JAR was only assembled in the first build container, build/libs will be empty in all the other build containers.
+            - store_artifacts:
+                path: build/libs
+
+      workflows:
+        version: 2
+        workflow:
+          jobs:
+            - build
