--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -54,7 +54,8 @@ jobs:
           name: Assemble JAR
           command:
             # Skip this for other nodes
-            if [ "$CIRCLE_NODE_INDEX" == 0 ]; then
+            if [ "$CIRCLE_NODE_INDEX" == 0 ]
+            then
                 ./gradlew assemble
             fi
             # As the JAR was only assembled in the first build container, build/libs will be empty in all the other build containers.
